--- a/.travis.yml
+++ b/.travis.yml
@@ -50,6 +50,7 @@ before_script:
 
 # Run the Build script
 script:
+  - cmake --version
   - cmake -GNinja -DCMAKE_BUILD_TYPE=Debug -DCMAKE_CXX_FLAGS="${FLAGS}" -DCMAKE_INSTALL_PREFIX=../_install -DENABLE_TESTING=ON -DRabbitmqc_DIR=${RABBITMQ_C_DIR} ..
   - cmake --build . --target install
   - AMQP_BROKER=localhost ASAN_OPTIONS=detect_leaks=1 ctest -V .
