--- a/.travis.yml
+++ b/.travis.yml
@@ -33,15 +33,19 @@ addons:
 
 # install pre-reqs
 install:
+  - echo $RABBITMQ_C_DIR
   - mkdir -p _prereqs
   - pushd _prereqs
   - git clone https://github.com/alanxz/rabbitmq-c
   - cd rabbitmq-c
   - git checkout v0.10.0
   - export RABBITMQC_DIR=`pwd`/../../_install
+  - echo $RABBITMQ_C_DIR
   - cmake -GNinja -DCMAKE_BUILD_TYPE=Release -DCMAKE_INSTALL_PREFIX=${RABBITMQC_DIR} -DBUILD_EXAMPLES=OFF -DBUILD_TESTS=OFF -DBUILD_TOOLS=OFF .
   - cmake --build . --target install
+  - echo $RABBITMQ_C_DIR
   - popd
+  - echo $RABBITMQ_C_DIR
 
 before_script:
   - mkdir _build
@@ -50,6 +54,7 @@ before_script:
 
 # Run the Build script
 script:
+  - echo $RABBITMQ_C_DIR
   - cmake -GNinja -DCMAKE_BUILD_TYPE=Debug -DCMAKE_CXX_FLAGS="${FLAGS}" -DCMAKE_INSTALL_PREFIX=../_install -DENABLE_TESTING=ON -DRabbitmqc_DIR=${RABBITMQ_C_DIR} ..
   - cmake --build . --target install
   - AMQP_BROKER=localhost ASAN_OPTIONS=detect_leaks=1 ctest -V .
